infrastructure/security/2-cluster/policies/gatekeeper/policies/allowed-repositories/example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
  labels:
    app: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu-container
        image: ubuntu:latest
        command: ["/bin/sleep", "infinity"]  # Keep the container running for demonstration purposes
