infrastructure/security/2-cluster/policies/gatekeeper/policies/allowed-repositories/test2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-disallowed
  namespace: teste
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
